--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/router": "^5.0.0",
     "angular-star-rating": "^3.0.8",
     "angular2-image-zoom": "^1.2.1",
+    "angular2-social-login": "^3.1.1",
+    "angular2-text-equality-validator": "^2.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng2-validation": "^4.2.0",
     "ngx-bootstrap": "^2.0.0-beta.8",
     "ngx-infinite-scroll": "^0.6.1",
     "rxjs": "^5.5.2",
